<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.standrews.cs</groupId>
    <artifactId>sos</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>sos</name>
    <description>Sea Of Stuff</description>

    <modules>
        <module>sos-core</module>
        <module>sos-rest</module>
        <module>sos-rest-jetty</module>
        <module>web-ui</module>
        <module>sos-configuration</module>
        <module>sos-app</module>
        <module>sos-filesystem</module>
    </modules>

    <properties>
        <jdk.version>1.8</jdk.version>
        <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.0.0</maven-assembly-plugin.version>

        <testng.version>6.9.10</testng.version>
        <powermock.version>1.6.5</powermock.version>

        <commons.io.version>2.5</commons.io.version>
        <jackson.version>2.8.5</jackson.version>

        <!-- http://stackoverflow.com/questions/3017695/how-to-configure-encoding-in-maven -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons.io.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.jaxrs</groupId>
            <artifactId>jackson-jaxrs-json-provider</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- St Andrews Libraries -->
        <dependency>
            <groupId>uk.ac.standrews.cs</groupId>
            <artifactId>guid-sta</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>uk.ac.standrews.cs</groupId>
            <artifactId>logger</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!-- TEST DEPENDENCIES -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <developers>
        <developer>
            <id/>
            <name>Simone Ivan Conte</name>
            <email>sic2@st-andrews.ac.uk</email>
            <url>http://sic2.host.cs.st-andrews.ac.uk/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>http://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>PhD Student</role>
            </roles>
        </developer>

        <developer>
            <id/>
            <name>Alan Dearle</name>
            <email>alan.dearle@st-andrews.ac.uk</email>
            <url>http://al.host.cs.st-andrews.ac.uk/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>http://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Supervisor</role>
            </roles>
        </developer>

        <developer>
            <id/>
            <name>Graham Kirby</name>
            <email>graham.kirby@st-andrews.ac.uk</email>
            <url>http://graham.host.cs.st-andrews.ac.uk/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>http://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Supervisor</role>
            </roles>
        </developer>
    </developers>

</project>